# TeamProject_W1

./: .gitignore  README.md  Veracity_Presentation.pptx  Veracity_Speech.docx  generate_deck.py  generate_speech.py
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  main.py  seed.py
backend/app/api/: auth.py  deps.py  influencers.py  scans.py
backend/app/models/: __init__.py  flag.py  influencer.py  scan.py  user.py
backend/app/providers/: base.py  factory.py  fixtures.py  mock_instagram.py  mock_tiktok.py  synth.py
backend/app/schemas/: auth.py  influencer.py  scan.py
backend/app/scoring/: audience_fit.py  engagement.py  engine.py  flags.py  follower_quality.py  growth.py
backend/app/services/: auth.py  scan_runner.py
backend/tests/: conftest.py  test_api.py  test_scoring.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: auth.ts  client.ts  influencers.ts  scans.ts
frontend/src/components/: charts.tsx  icons.tsx  ui.tsx
frontend/src/hooks/: useAuth.tsx  useScan.ts  useTheme.ts
frontend/src/lib/: format.ts  score.ts
frontend/src/pages/: Compare.tsx  Dashboard.tsx  Login.tsx
frontend/src/sections/: AudienceDemographics.tsx  CommentQuality.tsx  CompareColumn.tsx  EngagementTimeline.tsx  Header.tsx  InfluencerSearch.tsx  PlatformBadge.tsx  ProfileCard.tsx  RedFlagsPanel.tsx  ScoreCard.tsx  (+1 more)
project wr, design/: Influencer Authenticity Checker.html  app.jsx  components.jsx  data.js  sections.jsx
