[project]
name = "veracity-backend"
version = "0.1.0"
description = "Influencer Authenticity Checker API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.4",
    "bcrypt>=4.0",
    "pyjwt>=2.9",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
